{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 23,
  "lineage": "eb234c57-cbc8-6ec3-024b-0c90f8dff7a2",
  "resources": [
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-08dd6eecc94365891",
            "id": "rtb-08dd6eecc94365891",
            "owner_id": "838522581324",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-default"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:security-group/sg-079de891e08a66c9f",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-079de891e08a66c9f",
            "ingress": [],
            "name": "default",
            "owner_id": "838522581324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-default"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06238a6e5720ace69",
            "public_dns": "ec2-54-221-172-156.compute-1.amazonaws.com",
            "public_ip": "54.221.172.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:internet-gateway/igw-087eec21cd56210d5",
            "id": "igw-087eec21cd56210d5",
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06238a6e5720ace69",
            "id": "nat-07ba92b546f59d5ab",
            "network_interface_id": "eni-01be993c6cb459eaa",
            "private_ip": "10.2.9.144",
            "public_ip": "54.221.172.156",
            "subnet_id": "subnet-02f41e38773a717e8",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            }
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_eip.nat",
            "module.vpc01.module.vpc.aws_internet_gateway.this",
            "module.vpc01.module.vpc.aws_subnet.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c2aef3d84c28d3981080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07ba92b546f59d5ab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c2aef3d84c28d398",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_eip.nat",
            "module.vpc01.module.vpc.aws_internet_gateway.this",
            "module.vpc01.module.vpc.aws_nat_gateway.this",
            "module.vpc01.module.vpc.aws_route_table.private",
            "module.vpc01.module.vpc.aws_subnet.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087eec21cd56210d5",
            "id": "r-rtb-0a5dc1475006ed8f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a5dc1475006ed8f5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_internet_gateway.this",
            "module.vpc01.module.vpc.aws_route_table.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c2aef3d84c28d398",
            "owner_id": "838522581324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a5dc1475006ed8f5",
            "owner_id": "838522581324",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040d8fc48d2f658e9",
            "route_table_id": "rtb-0c2aef3d84c28d398",
            "subnet_id": "subnet-04b8ea55b57c68e8b"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.private",
            "module.vpc01.module.vpc.aws_subnet.private",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0608ea899c7264464",
            "route_table_id": "rtb-0c2aef3d84c28d398",
            "subnet_id": "subnet-0e9e28a969480a6ad"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.private",
            "module.vpc01.module.vpc.aws_subnet.private",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0069b60788defafa3",
            "route_table_id": "rtb-0c2aef3d84c28d398",
            "subnet_id": "subnet-0be05f10ca2749b25"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.private",
            "module.vpc01.module.vpc.aws_subnet.private",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc6c04a887d713ad",
            "route_table_id": "rtb-0a5dc1475006ed8f5",
            "subnet_id": "subnet-02f41e38773a717e8"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.public",
            "module.vpc01.module.vpc.aws_subnet.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f719a658959bb2e4",
            "route_table_id": "rtb-0a5dc1475006ed8f5",
            "subnet_id": "subnet-0f5993f1de2beb0d9"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.public",
            "module.vpc01.module.vpc.aws_subnet.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d037a258965521",
            "route_table_id": "rtb-0a5dc1475006ed8f5",
            "subnet_id": "subnet-0ae9fa2707fef6dc1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_route_table.public",
            "module.vpc01.module.vpc.aws_subnet.public",
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-04b8ea55b57c68e8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.64.0/19",
            "id": "subnet-04b8ea55b57c68e8b",
            "map_public_ip_on_launch": false,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-0e9e28a969480a6ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.96.0/19",
            "id": "subnet-0e9e28a969480a6ad",
            "map_public_ip_on_launch": false,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-0be05f10ca2749b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.128.0/19",
            "id": "subnet-0be05f10ca2749b25",
            "map_public_ip_on_launch": false,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-private",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-02f41e38773a717e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.0.0/20",
            "id": "subnet-02f41e38773a717e8",
            "map_public_ip_on_launch": true,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-0f5993f1de2beb0d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.16.0/20",
            "id": "subnet-0f5993f1de2beb0d9",
            "map_public_ip_on_launch": true,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:subnet/subnet-0ae9fa2707fef6dc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.32.0/20",
            "id": "subnet-0ae9fa2707fef6dc1",
            "map_public_ip_on_launch": true,
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01-public",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f10c444cf29366c1"
          },
          "dependencies": [
            "module.vpc01.module.vpc.aws_vpc.this",
            "module.vpc01.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc01.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:vpc/vpc-0f10c444cf29366c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0408305ada66533ae",
            "default_route_table_id": "rtb-08dd6eecc94365891",
            "default_security_group_id": "sg-079de891e08a66c9f",
            "dhcp_options_id": "dopt-b1b2ceca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f10c444cf29366c1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08dd6eecc94365891",
            "owner_id": "838522581324",
            "tags": {
              "Application": "vpc01",
              "Name": "vpc01"
            }
          }
        }
      ]
    }
  ]
}